# PREVxREAL

./: credenciais.py  lovalidades.txt  main.py  pyproject.toml  teste.py
.streamlit/: secrets.toml
