[project]
name = "previsto-realizdo"
version = "0.1.0"
description = "extrai informações da omie e cria um relatório de previsto-realizdo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
]
